--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -124,8 +124,8 @@
    <widget class="QLabel" name="label_MaxParticles">
     <property name="geometry">
      <rect>
-      <x>910</x>
-      <y>139</y>
+      <x>907</x>
+      <y>149</y>
       <width>70</width>
       <height>16</height>
      </rect>
@@ -513,8 +513,8 @@
    <widget class="QLineEdit" name="maxParticles">
     <property name="geometry">
      <rect>
-      <x>920</x>
-      <y>158</y>
+      <x>917</x>
+      <y>168</y>
       <width>45</width>
       <height>20</height>
      </rect>
@@ -1083,8 +1083,8 @@
    <widget class="QCheckBox" name="noiseDissolve">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>240</y>
+      <x>842</x>
+      <y>265</y>
       <width>111</width>
       <height>17</height>
      </rect>
@@ -1097,7 +1097,7 @@
     <property name="geometry">
      <rect>
       <x>820</x>
-      <y>160</y>
+      <y>155</y>
       <width>61</width>
       <height>17</height>
      </rect>
@@ -1466,8 +1466,8 @@
    <widget class="QCheckBox" name="bloomParticles">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>224</y>
+      <x>842</x>
+      <y>249</y>
       <width>111</width>
       <height>17</height>
      </rect>
@@ -1479,9 +1479,9 @@
    <widget class="QSlider" name="rotationSlider">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>520</y>
-      <width>175</width>
+      <x>640</x>
+      <y>599</y>
+      <width>100</width>
       <height>22</height>
      </rect>
     </property>
@@ -1489,10 +1489,10 @@
      <string notr="true">selection-background-color: rgb(53, 53, 53);</string>
     </property>
     <property name="minimum">
-     <number>-19</number>
+     <number>-99</number>
     </property>
     <property name="maximum">
-     <number>19</number>
+     <number>99</number>
     </property>
     <property name="singleStep">
      <number>1</number>
@@ -1519,8 +1519,8 @@
    <widget class="QLineEdit" name="rotation">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>520</y>
+      <x>570</x>
+      <y>599</y>
       <width>60</width>
       <height>20</height>
      </rect>
@@ -1541,8 +1541,8 @@
    <widget class="QLabel" name="label_Velocity_3">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>500</y>
+      <x>570</x>
+      <y>579</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -1552,6 +1552,22 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="worldspace">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>170</y>
+      <width>81</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>World Space</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
     </property>
    </widget>
    <zorder>graphics</zorder>
@@ -1613,6 +1629,7 @@
    <zorder>rotationSlider</zorder>
    <zorder>rotation</zorder>
    <zorder>label_Velocity_3</zorder>
+   <zorder>worldspace</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
